# src/main/java/com/example/aop/mapStruct/exercise/models/openFeign/Character.java
@@ -1,0 +1,20 @@
+package com.example.aop.mapStruct.exercise.models.openFeign;
+
+import lombok.Data;
+
+import java.util.List;
+@Data
+public class Character {
+    private Integer id;
+    private String name;
+    private String status;
+    private String species;
+    private String type;
+    private String gender;
+    private Origin origin;
+    private Location location;
+    private String image;
+    private List<String> episode;
+    private String url;
+    private String created;
+}
