# src/main/java/com/example/aop/mapStruct/exercise/models/openFeign/Location.java
@@ -1,0 +1,9 @@
+package com.example.aop.mapStruct.exercise.models.openFeign;
+
+import lombok.Data;
+
+@Data
+public class Location {
+    private String name;
+    private String url;
+}
