# src/main/java/com/example/aop/mapStruct/exercise/services/CharacterService.java
@@ -1,0 +1,7 @@
+package com.example.aop.mapStruct.exercise.services;
+
+import com.example.aop.mapStruct.exercise.api.model.CharacterListResponse;
+
+public interface CharacterService {
+    CharacterListResponse getCharacters();
+}
