# src/main/resources/api.yaml
@@ -128,6 +128,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TaskListResponse'
+  /getCharacterInfo:
+    get:
+      tags:
+        - getCharacterInfo
+      summary: Get the list of character through RickAndMontyApi
+      operationId: GetCharacterInfo
+      responses:
+        '200':
+          description: Get the list of characters through OpenFeignClient
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CharacterListResponse'
 
 components:
   schemas:
@@ -212,6 +225,76 @@ components:
           type: string
         status:
           type: string
+
+    CharacterListResponse:
+      type: object
+      properties:
+        info:
+          $ref: '#/components/schemas/MetadataModel'
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/CharacterModel'
+
+    CharacterModel:
+      type: object
+      properties:
+        created:
+          type: string
+        episode:
+          type: array
+          items:
+            type: string
+        gender:
+          type: string
+        id:
+          type: integer
+          format: int32
+        image:
+          type: string
+        location:
+          $ref: '#/components/schemas/LocationModel'
+        name:
+          type: string
+        origin:
+          $ref: '#/components/schemas/OriginModel'
+        species:
+          type: string
+        status:
+          type: string
+        url:
+          type: string
+    LocationModel:
+      type: object
+      properties:
+        name:
+          type: string
+        url:
+          type: string
+    MetadataModel:
+      type: object
+      properties:
+        count:
+          type: integer
+          format: int32
+        next:
+          type: string
+        pages:
+          type: integer
+          format: int32
+        prev:
+          type: string
+
+    OriginModel:
+      type: object
+      properties:
+        name:
+          type: string
+        url:
+          type: string
+
+
+
     ObjectCreationSuccessResponse:
       type: object
       properties:
